# quintessential-snowfinchs-cpp

./: .gitignore  CMakeLists.txt  Compiler.cpp  L1Compiler.cpp  README.md  build.sh  main.cpp  run.sh  test.sh
.github/workflows/: test-op.yaml  test.yaml
demo/: Program.txt  SyntaxInput_KIT.txt  syntaxInput.txt
grammar/: AST.txt  SyntaxInput.txt  TokenSpecs.txt
include/: AST.h  Automata.h  GrammarResourcePool.h  IRGenerator.h  ItemCollection.h  ItemCollectionManager.h  LR1Generator.h  Production.h  Symbol.h  SymbolTable.h  SyntaxParser.h  SyntaxTree.h
resources/: H.txt  N.txt  T.txt  Z1.txt
resources/lab1/: A1.txt  A3.txt  A7.txt  C.txt  J.txt  K.txt  K3.txt  K5.txt  M.txt  O.txt  U3.txt  Y.txt  Z.txt  Z2.txt  Z3.txt
resources/lab2/: A.txt  A1.txt  A11.txt  A12.txt  A13.txt  A2.txt  A3.txt  A4.txt  A5.txt  A6.txt  A7.txt  A8.txt  A9.txt  B1.txt  C.txt  C1.txt  C10.txt  C11.txt  C12.txt  C13.txt  C14.txt  C2.txt  C3.txt  C4.txt  C5.txt  C6.txt  C7.txt  C8.txt  C9.txt  D1.txt  D2.txt  D3.txt  D4.txt  D5.txt  E1.txt  E2.txt  E3.txt  F1.txt  F2.txt  F3.txt  (+4 more)
resources/lab3/: A1.txt  A10.txt  A2.txt  A3.txt  A4.txt  A5.txt  A6.txt  A7.txt  A8.txt  A9.txt  B1.txt  B2.txt  B3.txt  B4.txt  B5.txt  C1.txt  C10.txt  C11.txt  C12.txt  C13.txt  C2.txt  C3.txt  C4.txt  C5.txt  C6.txt  C7.txt  C8.txt  C9.txt  D1.txt  D2.txt
resources/lab4/: A1.txt  A10.txt  A11.txt  A12.txt  A2.txt  A3.txt  A4.txt  A5.txt  A6.txt  A7.txt  A8.txt  A9.txt  B1.txt  B2.txt  B3.txt  B4.txt  B5.txt  B6.txt  B7.txt  B8.txt  B9.txt  C1.txt  C2.txt  C3.txt
resources/test/: lab1.json  lab1.txt  lab2.json  lab3.json  lab4.json  test.json
src/: API.cpp  API.h  ASMGenerator.cpp  ASMGenerator.h  AST.cpp  AST.h  AnalyseTableGenerator.cpp  AnalyseTableGenerator.h  Automata.cpp  BinaryGenerator.cpp  BinaryGenerator.h  CFGBasicBlock.h  CFSemanticAnalyzer.cpp  CFSemanticAnalyzer.h  CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowGraphAlgos.cpp  ControlFlowGraphAlgos.h  Driver.cpp  Driver.hpp  FlexLexer.h  GrammarResourcePool.cpp  GrammarResourcePool.h  IR2Generator.cpp  IR2Generator.h  IRGenerator.cpp  IRGenerator.h  IRInstruction.cpp  IRInstruction.h  InterferenceGraph.cpp  InterferenceGraph.h  InterferenceGraphAlgos.h  Item.cpp  Item.h  ItemCollection.cpp  ItemCollection.h  ItemCollectionManager.cpp  ItemCollectionManager.h  L1Compiler.cpp  (+30 more)
src/core/: ASMGenerator.cpp  ASMGenerator.h  AST.cpp  AST.h  BinaryGenerator.cpp  BinaryGenerator.h  CFSemanticAnalyzer.cpp  CFSemanticAnalyzer.h  CMakeLists.txt  Driver.cpp  Driver.hpp  IR2Generator.cpp  IR2Generator.h  IRGenerator.cpp  IRGenerator.h  IRVariableOptimizer.cpp  IRVariableOptimizer.h  Lexer.l  Lexer.yy.cpp  Parser.cpp  Parser.hpp  Parser.y  ScopedSymbolTable.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  Utils.cpp  Utils.h
src/driver/: API.cpp  API.h  CMakeLists.txt
src/handlers/: CMakeLists.txt  IGHandlers.cpp  IRHandlers.cpp  IRHandlers.h  SemanticHandlers.cpp  SemanticHandlers.h  Translators.cpp  Translators.h  X86Translator.cpp  X86Translator.h
src/model/: AST.cpp  AST.h  ASTDefs.h  CFGBasicBlock.cpp  CFGBasicBlock.h  CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowGraphAlgos.cpp  ControlFlowGraphAlgos.h  IRInstruction.cpp  IRInstruction.h  InterferenceGraph.cpp  InterferenceGraph.h  InterferenceGraphAlgos.cpp  InterferenceGraphAlgos.h  Scope.cpp  Symbol.cpp  Symbol.h  SymbolDefs.h  SymbolMetaTypedef.h  Utils.cpp  Utils.h
src/pch/: CMakeLists.txt  pch.h
test/: A.txt  B.txt  CMakeLists.txt  D.txt  F.txt  FPETrap.cpp  G.txt  I.txt  K1.txt  K4.txt  L1CompilerTest.cpp  L1CompilerTest.h  P.txt  R.txt  S.txt  SpillTest.txt  TestBasic.cpp  TestLab1.cpp  TestLab2.cpp  TestLab3.cpp  TestLab4.cpp  TestResources.cpp  TestUtils.cpp  W.txt  X.txt  pch.h  pch_test.h
